# GameProjects-Win

./: .gitignore  CMakeLists.txt  README.md
Source/0.Skeleton/: CMakeLists.txt  Game.cpp  Game.h  Main.cpp
Source/1.PingPong/: CMakeLists.txt  Game.cpp  Game.h
Source/2.GameObject/: Actor.cpp  Actor.h  CMakeLists.txt  Component.h  Game.cpp  Game.h
Source/3.Sprites/: Actor.cpp  Actor.h  AnimSpriteComponent.h  CMakeLists.txt  Component.cpp  Game.cpp  Game.h  Math.cpp  Math.hpp  Ship.cpp  Ship.h  SpriteComponent.cpp
Source/4.Physics/: Actor.cpp  Actor.h  AnimSpriteComponent.cpp  Asteroid.cpp  Asteroid.h  BGSpriteComponent.cpp  BGSpriteComponent.h  CMakeLists.txt  CircleComponent.cpp  CircleComponent.h  Component.h  Game.cpp  Game.h  InputComponent.cpp  InputComponent.h  Laser.cpp  Laser.h  Main.cpp  MoveComponent.cpp  MoveComponent.h  Random.cpp  Random.h  Ship.cpp  Ship.h  SpriteComponent.cpp  SpriteComponent.h
Source/5.1Physics/: Asteroid.cpp  Asteroid.hpp  CMakeLists.txt  Game.hpp  Laser.cpp  Laser.hpp  Main.cpp  Ship.cpp
Source/5.Framework/: CMakeLists.txt
Source/5.Framework/include/: Actor.hpp  AnimSpriteComponent.hpp  Asset.hpp  AssetManager.hpp  BGSpriteComponent.hpp  CircleComponent.hpp  GameInterface.hpp  InputComponent.hpp  MoveComponent.hpp  Random.hpp  RendererInterface.hpp  SpriteComponent.hpp
Source/5.Framework/include/Core/: Actor.hpp  Component.hpp  GameInterface.hpp  Math.hpp
Source/5.Framework/src/: Actor.cpp  AnimSpriteComponent.cpp  Asset.cpp  AssetManager.cpp  BGSpriteComponent.cpp  CircleComponent.cpp  Component.cpp  GameInterface.cpp  InputComponent.cpp  Math.cpp  MoveComponent.cpp  Random.cpp  RendererInterface.cpp  SpriteComponent.cpp
Source/6.AI/: Asteroid.cpp  CMakeLists.txt  Game.cpp  Game.hpp  RendererSDL.cpp  RendererSDL.hpp  Ship.cpp  Ship.hpp  TextureAsset.cpp  TextureAsset.hpp
Source/7.1Vulkan/: CMakeLists.txt  Game.cpp  Main.cpp
Source/7.OpenGL/: CMakeLists.txt  GLShader.cpp  GLShader.hpp  Game.cpp  Game.hpp  RendererGL.cpp  RendererGL.hpp  VertexArray.cpp  VertexArray.hpp
Source/7.OpenGL/Shaders/: Basic.frag  Basic.vert
docs/: README-CN.md
